read display export current day

--- a/.gitignore
+++ b/.gitignore
@@ -248,3 +248,5 @@ BuildTools/AntrianKuSetup.7z
 BuildTools/SiapCetak/symbols.map
 BuildTools/SiapCetak/symbols.map
 BuildTools/SiapCetak/symbols.map
+
+res/
